# TetherScript

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  bench_cached_servers.sh  bench_servers.sh  bench_servers_keepalive.sh  bench_sitegen.sh  bench_static_native.sh  check_file_limits.ps1  check_file_limits.sh  docker-compose.yml  serve-site  sitegen  trd.md
.github/workflows/: ci.yml
.tetherscript/: reload
.tmp/: agent_in.txt  agent_out_prompt.txt  probe_trace_err.txt  probe_trace_out.txt  real_provider_listing_in.txt  real_provider_listing_out.txt  real_provider_out.txt  real_provider_out_after_fix.txt  router_in.txt  router_out.txt  router_out_final.txt  router_requests.txt  router_requests_4.txt  router_requests_final.txt
artifacts/runtime_resources/: validation-blockers.md
docs/: agent-browser-contract.md  agent-tui.md  async-runtime.md  browser-capability-api.md  browser-parity-checklist.md  browser-wpt-fixtures.md  browser-wpt-map.md  computer-capability-api.md  owned-resources.md  rpc-capability.md  rpc-implementation-summary.md  standard-tools.md  tetherscript-and-codetether.md  tetherscript-declaration.md
docs/blog/: 2026-07-12-a-tetherscript-agent-that-can-rebuild-itself.md
editor/vscode/: .vscodeignore  LICENSE  README.md  extension.js  package.json
examples/: actix_plugin_server.rs  agent_tui.tether  api_gateway.tether  async_basic.tether  browser_canvas_image_data.tether  browser_css_media.tether  browser_document_commands.tether  browser_dom_mutation.tether  browser_element_scroll.tether  browser_mutation_observer.tether  browser_render.tether  browser_screen_orientation.tether  browser_selectors.tether  browser_visual_viewport.tether  browser_webgl_clear.tether  browser_webgl_indexed.tether  browser_webgl_read_pixels.tether  browser_webgl_scissor.tether  browser_webgl_texture.tether  browser_webgl_triangle.tether  capability_computer.tether  capability_fs.kl  capability_fs.tether  capability_http.kl  capability_http.tether  cli_args.tether  closures.kl  computer_named_cursors.tether  dual_ui.tether  fib30.tether  glm_chat.tether  hello.kl  hello.rk  http_bench_client.js  http_hello.kl  https_client.tether  https_server.tether  ir_arithmetic.tether  js_regex_probe.tether  json.tether  (+58 more)
examples/actix-web-demo/: Cargo.toml  README.md  benchmark.js  dashboard.html
examples/actix-web-demo/controllers/: tether_route.tether
examples/actix-web-demo/src/: bootstrap_database.rs  dashboard.rs  database.rs  dataset.rs  db_authority.rs  db_bind.rs  db_config.rs  db_decode.rs  db_decode_numeric.rs  db_pool.rs  db_query.rs  db_row.rs  import.rs  import_sql.rs  main.rs  rust_route.rs  tether_route.rs
examples/cap_workspace/: hello.txt
examples/modules/: math.tether
experiments/: README.md
experiments/examples/: browser.css  browser.html  browser_render.tether  embed_policy.rs  fib.tether  glm_stream.tether  hello.tether  http_hello.tether  provider_stream.tether  repair_host.rs  rpc_a2a.tether  rpc_mcp.tether  (+3 more)
src/: actix_web.rs  ast.rs  browser.rs  browser_agent.rs  browser_cap.rs  browser_cookie.rs  browser_dom.rs  browser_events.rs  browser_js.rs  browser_js_canvas.rs  browser_js_canvas_image_data_error_tests.rs  browser_js_canvas_image_data_tests.rs  browser_js_canvas_tests.rs  browser_js_channels.rs  browser_js_channels_tests.rs  browser_js_compat.rs  browser_js_cookies.rs  browser_js_custom.rs  browser_js_default_action.rs  browser_js_dom.rs  browser_js_dom_tests.rs  browser_js_event_path.rs  browser_js_fullscreen.rs  browser_js_global_names.rs  browser_js_http_status.rs  browser_js_inline_preflight.rs  browser_js_lifecycle.rs  browser_js_metadata.rs  browser_js_network_cookies.rs  browser_js_network_cookies_request.rs  browser_js_network_cookies_response.rs  browser_js_network_cookies_state.rs  browser_js_observer_tests.rs  browser_js_performance.rs  browser_js_performance_tests.rs  browser_js_realtime_model.rs  browser_js_redirects.rs  browser_js_redirects_cors.rs  browser_js_redirects_cors_preflight.rs  browser_js_redirects_cors_simple.rs  (+141 more)
tests/: actix_web_plugin.rs  agent_browser_auth_cookies.rs  agent_browser_bundle_exports.rs  agent_browser_cli.rs  agent_browser_cors_credentials.rs  agent_browser_dynamic_import.rs  agent_browser_layout_evidence.rs  agent_browser_modules.rs  agent_browser_native_contract.rs  agent_browser_navigation_network.rs  agent_browser_network_redirects.rs  agent_browser_page.rs  agent_browser_production_debug.rs  agent_browser_react_interaction.rs  agent_browser_react_render.rs  agent_browser_resource_network.rs  agent_browser_resources.rs  agent_tui.rs  async_runtime.rs  browser_agent_e2e.rs  browser_assertions.rs  browser_canvas_image_data_example.rs  browser_cap_contract.rs  browser_cap_live.rs  browser_cli_grant.rs  browser_css_media_example.rs  browser_css_media_parity.rs  browser_document_commands_example.rs  browser_dom_mutation_example.rs  browser_dom_mutation_parity.rs  browser_element_scroll_example.rs  browser_js_array_prototype.rs  browser_js_date_methods.rs  browser_js_document_commands.rs  browser_js_dom_adoption.rs  browser_js_eval_global.rs  browser_js_event_listener_options.rs  browser_js_event_propagation.rs  browser_js_headers.rs  browser_js_json_global.rs  (+68 more)
(+2386 files in other folders)
