[package]
name = "tetherscript"
version = "0.1.0-alpha.24"
authors = ["Riley Seaburg <riley@rileyseaburg.com>"]
edition = "2024"
description = "A dynamically-typed scripting language with Rust-style ownership, implemented as a bytecode VM in Rust"
license = "MIT"
repository = "https://github.com/codetether/tetherscript"
readme = "README.md"
keywords = ["scripting", "embedded", "language", "vm", "sandbox"]
categories = ["compilers", "parser-implementations", "embedded"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/check_file_limits.ps1",
    "/check_file_limits.sh",
    "/LICENSE-MIT",
    "/README.md",
    "/docs/**",
    "/examples/**",
    "!/examples/.codetether/**",
    "!/examples/.tetherscript/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "tetherscript"
path = "src/lib.rs"

[[bin]]
name = "tetherscript"
path = "src/main.rs"

[[example]]
name = "actix_plugin_server"
path = "examples/actix_plugin_server.rs"
required-features = ["actix-web"]

[lints.clippy]
collapsible_if = "allow"

[features]
default = []
actix-web = ["dep:actix-web"]
openssl-tls = ["dep:openssl", "dep:rustls-native-certs"]
tera = ["dep:tera"]

[dependencies]
actix-web = { version = "=4.11.0", optional = true, default-features = false, features = ["macros"] }
# HTTPS runs in-process and ships without a runtime OpenSSL installation.
openssl = { version = "0.10.81", optional = true, features = ["vendored"] }
# Supplies platform trust anchors to OpenSSL, including the Windows cert store.
rustls-native-certs = { version = "0.8.4", optional = true }
tera = { version = "1.20.0", optional = true }