[package]
name = "tetherscript-actix-web-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
actix-web = "=4.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"] }
tetherscript = { path = "../..", features = ["actix-web"] }
tokio = { version = "1", features = ["rt"] }
ureq = { version = "2.12", features = ["json"] }